<resources>
    <string name="app_name">PriceCompare</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="sync">Sync</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="activity_1">Activity 1</string>
    <string name="Go">go</string>
    <string name="product_details">Product Details</string>
    <string name="todo">TODO</string>
    <string name="price">Price</string>
    <string name="rating">Rating:</string>
    <string name="specifications">Specifications</string>
    <string name="price_comparing">Price Comparing</string>
    <string name="main_specifications">Main specifications:</string>
    <string name="rear_camera">Rear Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="screen_size">Screen Size</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="processor">Processor</string>
    <string name="internal_memory">Internal Memory</string>
    <string name="ram">RAM</string>
    <string name="battery">Battery</string>
    <string name="thumbnail">thumbnail</string>
    <string name="categories">Categories</string>
    <string name="mobiles">Mobiles</string>
    <string name="smartphones_and_accessories">Smartphones and accessories</string>
    <string name="sort">Sort</string>
    <string name="price_low_to_high">Price: low to high</string>
    <string name="price_high_to_low">Price: high to low</string>
    <string name="price_from">Price from</string>
    <string name="to">to</string>
    <string name="filter">Filter</string>
    <string name="show">Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="rupee_symbol">Rupee symbol</string>
    <string name="low_high">Low-High</string>
    <string name="high_low">High-Low</string>
    <string name="z_a">Z-A</string>
    <string name="a_z">A-Z</string>
    <string name="instruction1_1">First you need to click</string>
    <string name="instruction1_3">to open side</string>
    <string name="instruction1_4">menu where you can choose necessary category and subcategory.</string>
    <string name="instruction2_1">After choosing the right subcategory it is possible to use search near</string>
    <string name="instruction2_4">icon or</string>
    <string name="instruction2_5">use either sorting or filtration by price in the side menu in order to find the necessary product. You can also open product page immediately.</string>
    <string name="instruction3_1">In the product\'s page you can view product\'s specifications or move to comparison by clicking \'PRICE COMPARING\'.</string>
    <string name="instruction4_1">In \'PRICE COMPARING\' it is possible to filter price suggestions A to Z or Z to A by alphabet and low to high or high to low by price. You can also click the link and visit product\'s page on specific shop\'s website</string>
</resources>