<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18191A"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/instruction1.1"
                android:layout_width="179dp"
                android:layout_height="26dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="36dp"
                android:text="@string/instruction1_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/instruction1.2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="222dp"
                android:layout_marginTop="37dp"
                android:background="@drawable/ic_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction1.3"
                android:layout_width="179dp"
                android:layout_height="26dp"
                android:layout_marginStart="255dp"
                android:layout_marginTop="36dp"
                android:text="@string/instruction1_3"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction1.4"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="56dp"
                android:text="@string/instruction1_4"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction2.1"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="120dp"
                android:text="@string/instruction2_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/instruction2.3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="265dp"
                android:layout_marginTop="145dp"
                android:background="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction2.4"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="290dp"
                android:layout_marginTop="142dp"
                android:text="@string/instruction2_4"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction2.5"
                android:layout_width="346dp"
                android:layout_height="90dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="162dp"
                android:text="@string/instruction2_5"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction3.1"
                android:layout_width="346dp"
                android:layout_height="90dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="265dp"
                android:text="@string/instruction3_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction4.1"
                android:layout_width="346dp"
                android:layout_height="120dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="365dp"
                android:text="@string/instruction4_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/main_nav_menu"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"/>

    </androidx.drawerlayout.widget.DrawerLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:background="?attr/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/toolbar_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_menu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </androidx.appcompat.widget.Toolbar>

</FrameLayout>