<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/blue"
    tools:context=".ProductDetailsActivity">

    <TextView
        android:id="@+id/productName"
        android:layout_width="407dp"
        android:layout_height="51dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="137dp"
        android:gravity="center_horizontal|center_vertical"
        android:text=""
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/productImage"
        android:layout_width="353dp"
        android:layout_height="200dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="112dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/price"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

    <TextView
        android:id="@+id/productPriceText"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text=""
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="64dp"
        android:layout_height="34dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/rating"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceText" />

    <TextView
        android:id="@+id/productRatingText"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text=""
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productRatingText"
        app:layout_constraintTop_toBottomOf="@+id/productPriceText"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:layout_marginTop="420dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_specifications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/specifications"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_price_comparing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/price_comparing"/>

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/specifications_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        tools:visibility="gone">

        <TextView
            android:id="@+id/mainSpecifications"
            android:layout_width="415dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#8CAFDA"
            android:gravity="start|center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="Main specifications:   " />

        <TableRow
            android:id="@+id/rCamera"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp">

            <TextView
                android:id="@+id/rearCamera"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/rear_camera"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/rearCameraSpecs"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/fCamera"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/frontCamera"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/front_camera"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/frontCameraSpecs"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/screenRes"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/screenResolution"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/screen_resolution"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/screenResolutionSpecs"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/screenS"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/screenSize"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/screen_size"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/screenSizeSpecs"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/proc"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/processor"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/processor"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/processorSpecs"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/inMemory"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/internalMemory"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/internal_memory"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/internalMemorySpecs"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/RAM"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/ram"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/ram"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/ramSpecs"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/battery"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/battery"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/batterySpecs"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#8CAFDA"
                android:gravity="start|center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="" />
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_comparing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        tools:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_a_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="A-Z" />

                <RadioButton
                    android:id="@+id/radio_z_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Z-A" />

                <RadioButton
                    android:id="@+id/radio_high_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="High-Low" />

                <RadioButton
                    android:id="@+id/radio_low_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Low-High" />
            </RadioGroup>
        </TableRow>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/price_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>